tests/diagnostics/expressions/unary/minus_operand_not_int64/expect.txt
# exit: 1
input/main.lang0:2:13: error: unary minus requires int64 operand
      return -true
              ^
